package baseNoStates;

//Class to normalize the names of every door state
public class States {
  //possible states of Doors
  public static final String LOCKED = "locked";
  public static final String UNLOCKED = "unlocked";
  public static final String UNLOCKED_SHORTLY = "unlocked_shortly";
  public static final String PROPPED = "propped";
}
